data/derived/sp14/progs/unify/prog1901.ml.out
Characters 117-140:
  | h::t -> ( (pos + 1),  (total) ) in
            ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
